# Codebase-Whisperer

./: .gitignore  db_test.py  inspect_schema.py  main.py  manual_ingest.py  manual_ollama.py  manual_query.py  pyproject.toml  rag_cli.py  requirements.txt
codebase_whisperer/: config.py  logging_utils.py  ollama.py
codebase_whisperer/chunking/: __init__.py  common.py  driver.py  java.py  plain.py
codebase_whisperer/chunking/t_sitter/: __init__.py  core.py  debug.py  lang_nodes.py  parser.py  util.py  walkers.py  xml.py
codebase_whisperer/chunking/tests/: test_parser.py  test_plain.py  test_ts_core.py
codebase_whisperer/db/: __init__.py  io.py  schema.py
codebase_whisperer/db/tests/: test_db.py
codebase_whisperer/indexing/: __init__.py  indexer.py  languages.py  util.py  walker.py
codebase_whisperer/indexing/tests/: test_indexer.py  test_walker.py
codebase_whisperer/llm/: memory.py  ollama.py  session.py
codebase_whisperer/pipelines/: ingest.py  query.py
codebase_whisperer/reasoning/: iterative.py
db/chunks.lance/_transactions/: 0-1210003f-899f-4192-89b8-f84bba58db59.txn  1-3b687df5-4901-4d22-904c-98a42bb03491.txn  2-fb556282-6f95-4e11-9bf3-6d889b3aff29.txn  3-31b9a008-5382-49a4-8a20-33c9a6f569f5.txn  4-646d4e1f-c191-49dc-8a0a-07836a2e75fb.txn
db/chunks.lance/_versions/: 1.manifest  2.manifest  3.manifest  4.manifest  5.manifest
docs/: api.yaml
test_repo/: pom.xml
tests/: test_chunking.py  test_db.py  test_ingest.py  test_java.py  test_ollama_client.py  test_parser.py  test_plain.py  test_ts_core.py  test_walker.py
(+135 files in other folders)
